--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tebex-sdk-nodejs",
   "version": "1.1.0",
   "description": "Gaming payments done right - Tebex is the monetization platform designed to grow your gaming revenue streams",
-  "main": "dist/index.js",
+  "main": "dist/tebex.js",
   "scripts": {
     "generate-headless": "openapi-generator-cli generate -i openapi/Headless/headless-api.yaml -o src/Headless/lib --package-name TebexHeadless --invoker-package TebexHeadless -g typescript-node",
     "generate-checkout": "openapi-generator-cli generate -i openapi/Checkout/checkout-api.yaml -o src/Checkout/lib --package-name TebexCheckout --invoker-package TebexCheckout -g typescript-node",
